--- a/Minecraft Mob Texture Packs BJ/Mobs Texture Pack BJ/projects/Mob Textures Project/RP/texts/en_US.lang
+++ b/Minecraft Mob Texture Packs BJ/Mobs Texture Pack BJ/projects/Mob Textures Project/RP/texts/en_US.lang
@@ -1,2 +1,4 @@
 pack.name=Mob Textures Project RP
 pack.description=New Mob Project From Github MCModdings!
+item.spawn_egg.entity.mcmoddings:aliencreeper.name=Spawn Alien Creeper
+entity.mcmoddings:aliencreeper.name=Alien Creeper
